--- a/knob-creek/src/scss/_variables.scss
+++ b/knob-creek/src/scss/_variables.scss
@@ -6,6 +6,7 @@ $white: #fff;
 $black: #000;
 
 $breakpoint-xl: 2000px;
-$breakpoint-l: 1440px;
-$breakpoint-md: 600px;
-$breakpoint-sm: 320px;
+$breakpoint-l: 1000px;
+$breakpoint-md: 767px;
+$breakpoint-sm: 600px;
+$breakpoint-xs: 480;
