--- a/knob-creek/src/scss/_grid.scss
+++ b/knob-creek/src/scss/_grid.scss
@@ -18,34 +18,17 @@ html {
   clear: both;
 }
 
-.one,
-.one-third,
-.two-thirds,
-.one-fourth,
-.half {
-  width: 100%;
+.flex-grid {
+  display: flex;
 }
 
-@media only screen and (min-width: 600px) {
-  .one-third {
-    width: calc(100% / 2);
-  }
-  .column {
-    float: left;
-  }
+.col {
+  flex: 1;
 }
 
-@media only screen and (min-width: 800px) {
-  .one {
-    width: 100%;
-  }
-  .half {
-    width: calc(100% / 2);
-  }
-  .one-third {
-    width: calc(100% / 3);
-  }
-  .column {
-    float: left;
+.col-half {
+  flex-basis: 50%;
+  @media only screen and (max-width: $breakpoint-sm) {
+    flex-basis: 100%;
   }
 }
