--- a/knob-creek/src/scss/_hero.scss
+++ b/knob-creek/src/scss/_hero.scss
@@ -5,11 +5,12 @@
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
+    z-index: 1;
 }
 
 .hero-text {
     color: $white;
-    margin-top: 25vh;
+    margin-top: 15vh;
     p {
         opacity: 0.7;
     }
