--- a/knob-creek/src/scss/_variables.scss
+++ b/knob-creek/src/scss/_variables.scss
@@ -1,7 +1,7 @@
 $brand-color-tan: #b5a484;
 $brand-color-tan--light: #f3f1ed;
 $brand-color-red: #bd3131;
-$brand-accent: #bd3131;
+$brand-accent: #932525;
 $white: #fff;
 $black: #000;
 
