--- a/knob-creek/src/scss/_hero.scss
+++ b/knob-creek/src/scss/_hero.scss
@@ -8,6 +8,21 @@
     z-index: 1;
 }
 
+.bottle {
+    position: relative;
+    height: 100vh;
+}
+
+.bottle-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
+    max-height: 80vh;
+}
+
 .hero-text {
     color: $white;
     margin-top: 15vh;
@@ -15,7 +30,7 @@
         opacity: 0.7;
     }
     @media screen and (min-width: $breakpoint-l) {
-        padding-left: 100px;
+        padding-left: 10rem;
     }
     @media screen and (max-width: $breakpoint-md) {
         text-align: center;
