--- a/knob-creek/src/scss/_article.scss
+++ b/knob-creek/src/scss/_article.scss
@@ -27,7 +27,7 @@
 	background-size: cover;
 	background-position: center center;
 	min-height: 480px;
-	max-height: 100%;
+	height: 100%;
 	width: 100%;
 	&--1 {
 		background-image: url('../../src/images/pour-mug.jpg');
