switch bottle image and adjust for responsive

--- a/knob-creek/src/scss/_article.scss
+++ b/knob-creek/src/scss/_article.scss
@@ -8,6 +8,9 @@
 	background-color: $white;
 	position: relative;
 	z-index: 2;
+	@media screen and (max-width: $breakpoint-sm) {
+		margin-top: -9vh;
+	}
 }
 
 .article-featured-description {
