--- a/knob-creek/src/scss/_hero.scss
+++ b/knob-creek/src/scss/_hero.scss
@@ -21,6 +21,9 @@
     right: 0;
     margin: auto;
     max-height: 80vh;
+    @media screen and (max-width: $breakpoint-sm) {
+        margin: 0 auto;
+    }
 }
 
 .hero-text {
@@ -32,7 +35,7 @@
     @media screen and (min-width: $breakpoint-l) {
         padding-left: 10rem;
     }
-    @media screen and (max-width: $breakpoint-md) {
+    @media screen and (max-width: $breakpoint-sm) {
         text-align: center;
     }
 }
