--- a/knob-creek/src/scss/_grid.scss
+++ b/knob-creek/src/scss/_grid.scss
@@ -18,17 +18,14 @@ html {
   clear: both;
 }
 
-.flex-grid {
-  display: flex;
-}
+
 
 .col {
   flex: 1;
 }
 
-.col-half {
-  flex-basis: 50%;
-  @media only screen and (max-width: $breakpoint-sm) {
-    flex-basis: 100%;
+@media only screen and (min-width: $breakpoint-sm) {
+  .flex-grid {
+    display: flex;
   }
 }
