--- a/knob-creek/src/scss/_variables.scss
+++ b/knob-creek/src/scss/_variables.scss
@@ -9,4 +9,4 @@ $breakpoint-xl: 2000px;
 $breakpoint-l: 1000px;
 $breakpoint-md: 767px;
 $breakpoint-sm: 600px;
-$breakpoint-xs: 480;
+$breakpoint-xs: 480px;
