fix article layouts - heading - add basic modal

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -3,8 +3,11 @@
 @import 'nav';
 @import 'hero';
 @import 'article';
+@import 'modal';
 @import 'type';
 @import 'helpers';
+@import 'footer';
+
 
 html {
   font-size: 62.5%;
