--- a/src/scss/_type.scss
+++ b/src/scss/_type.scss
@@ -58,6 +58,12 @@ ul {
 	}
 }
 
+.section-heading {
+	font-weight: 400;
+	font-size: 2.4rem;
+	margin-top: 33px;
+}
+
 .text-sm { font-size: 1.3rem; }
 .text-md { font-size: 1.8rem; }
 .text-lg { font-size: 2.2rem; }
