--- a/src/scss/_article.scss
+++ b/src/scss/_article.scss
@@ -4,13 +4,17 @@
 }
 
 .article-featured {
-	margin-top: -25vh;
+	margin-top: -272px;
 	background-color: $white;
 	position: relative;
 	z-index: 2;
 	@media screen and (max-width: $breakpoint-sm) {
-		margin-top: -9vh;
+		margin-top: -242px;
 	}
+}
+
+.article-spacer {
+	padding: 20px 0;
 }
 
 .article-featured-description {
@@ -45,11 +49,11 @@
 	background-color: #f3f1ed;
 	bottom: 0;
 	width: 100%;
+	height: 35%;
 
 	img	 {
 		height: 26px;
 	    width: 29px;
-	    background-color: #f3f1ed;
 	    fill: #bd3131;
 	}
 }
@@ -63,9 +67,19 @@ article {
 			color: $brand-accent;
 		}
 	}
+	h2 {
+		font-size: 19px;
+		width: 80%;
+		padding-bottom: 20px;
+		margin: 0 auto;
+		min-height: 60px;
+		font-weight: 500;
+	}
 	.date {
 		text-transform: uppercase;
 		font-weight: 600;
+		letter-spacing: 1px;
+		font-size: 1.4em;
 	}
 	.teaser {
 		font-weight: lighter;
@@ -93,7 +107,7 @@ article {
 .article-item--image {
 	background-size: cover;
 	background-position: center center;
-	height: 580px;
+	height: 65%;
 	&--1 {
 		background-image: url("../../src/images/www.knobcreek.com-1550031134660845.jpg");
 	}
@@ -158,16 +172,18 @@ article {
 	background-color: $brand-color-tan--light;
 	position: relative;
 	width: 100%;
-    height: 100%;
+    height: 550px;
 
 }
 
 .icon-container {
 	position: absolute;
-    top: 3px;
+    top: -7px;
     left: 50%;
     transform: translate(-50%, -50%);
-    border-radius: 50%;
+    border-top-left-radius: 90px;
+    border-top-right-radius: 90px;
+    height: 45px;
     padding: 17px;
     background-color: #f3f1ed;
 }
