--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -1,8 +1,10 @@
 .navbar {
-    max-width: 100%;
+    width: 100%;
     background-color: #1e1e1e;
     padding: 19px 34px 19px 54px;
     position: relative;
+    z-index: 9999;
+    overflow: auto;
     @media screen and (max-width: $breakpoint-l) {
         padding: 19px;
     }
@@ -32,6 +34,10 @@
             }
         }
     }
+}
+
+.navbar-social-share {
+    margin-top: 12px;
 }
 
 .navbar-sponsored {
@@ -64,3 +70,5 @@
     .nav-items--social { float: left; }
     .brand-logo { float: right; }
 }
+
+.brand-logo { height: 38px; }
