--- a/src/scss/_article.scss
+++ b/src/scss/_article.scss
@@ -33,9 +33,12 @@
 .article-featured-image {
 	background-size: cover;
 	background-position: center center;
-	min-height: 480px;
-	height: 100%;
 	width: 100%;
+	&:after {
+		content: '';
+		display: block;
+		padding-bottom: 100%;
+	}
 	&--1 {
 		background-image: url('../../src/images/pour-mug.jpg');
 	}
@@ -45,16 +48,29 @@
 .article-item--description {
 	text-align: center;
 	padding: 16px 0 30px;
-	position: absolute;
+	position: relative;
 	background-color: #f3f1ed;
-	bottom: 0;
 	width: 100%;
-	height: 35%;
+}
 
-	img	 {
-		height: 26px;
-	    width: 29px;
-	    fill: #bd3131;
+.icon {
+  height: 26px;
+  width: 29px;
+  fill: #bd3131;
+	&.icon--article {
+
+	}
+	&.icon--video {
+
+	}
+	&.icon--gallery {
+    height: 18px;
+    width: 29px;
+	}
+	&.icon--glass {
+    height: 39px;
+    width: 32px;
+    margin-top: -4px;
 	}
 }
 
@@ -107,7 +123,12 @@ article {
 .article-item--image {
 	background-size: cover;
 	background-position: center center;
-	height: 65%;
+	width: 100%;
+	&:after {
+		content: '';
+		display: block;
+		padding-bottom: 100%;
+	}
 	&--1 {
 		background-image: url("../../src/images/www.knobcreek.com-1550031134660845.jpg");
 	}
@@ -172,7 +193,6 @@ article {
 	background-color: $brand-color-tan--light;
 	position: relative;
 	width: 100%;
-    height: 550px;
 
 }
 
